WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253422
Fix the build with recent VisionKit
https://bugs.webkit.org/show_bug.cgi?id=253422
Summary
Fix the build with recent VisionKit
Tim Horton
Reported
2023-03-05 18:04:01 PST
Fix the build with recent VisionKit
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-05 18:04:15 PST
<
rdar://problem/106267142
>
Tim Horton
Comment 2
2023-03-05 18:05:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11094
EWS
Comment 3
2023-03-05 18:10:33 PST
Committed
261251@main
(3a664c82a866): <
https://commits.webkit.org/261251@main
> Reviewed commits have been landed. Closing PR #11094 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug