Cherry-pick 3a664c82a866. rdar://problem/106265485

Fix the build with recent VisionKit
    https://bugs.webkit.org/show_bug.cgi?id=253422
    rdar://106267142

    Unreviewed build fix.

    * Source/WebCore/PAL/pal/spi/cocoa/VisionKitCoreSPI.h:

    Canonical link: https://commits.webkit.org/261251@main

Canonical link: https://commits.webkit.org/260848.9@safari-7616.1.4-branch