Source/WebCore/PAL/pal/spi/cocoa/VisionKitCoreSPI.h
@@ -27,6 +27,10 @@
 
 #if USE(APPLE_INTERNAL_SDK)
 
+#if __has_include(<TextRecognition/CRRegion.h>)
+#import <TextRecognition/CRRegion.h>
+#endif
+
 #import <VisionKitCore/VKImageAnalysis_WebKit.h>
 #import <VisionKitCore/VisionKitCore.h>
 
